# eit-playground-gm

./: .gitignore  CMakeLists.txt  setup_gazebo.bash
launch/: mavros_launch.xml  posix.py
models/gm_drone/: gm_drone.sdf
models/gm_planter/: model.sdf
models/gm_planter/materials/scripts/: gm_planter.material
models/sdu_drone_mono_cam/: sdu_drone_mono_cam.sdf
models/sdu_drone_mono_cam_downward/: sdu_drone_mono_cam_downward.sdf
models/sdu_mono_cam/: model.sdf
src/: PID_flight_circle.py  PID_flight_controller.py  angle_debug.py  offb_node.cpp  offboard_ctrl.py  pid_tune_offboard.py  relay.py  takeoff_land.py
worlds/: aruco.world  gm_drone.world
